<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoidance_potential_field</name>
  <version>0.0.0</version>
  <description>Obstacle avoidance through potential field method. </description>
  <maintainer email="manuel.barkey@web.de">Manuel Barkey</maintainer>

  <license>BSD</license>

  
  <author email="manuel.barkey@web.de">Manuel Barkey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <build_depend>rtt</build_depend> 
  <build_depend>rtt_ros</build_depend> 
  <build_depend>rtt_roscomm</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>rtt</exec_depend> 
  <exec_depend>rtt_ros</exec_depend> 
  <exec_depend>rtt_rosnode</exec_depend> 
  <exec_depend>rtt_roscomm</exec_depend> 
  <exec_depend>rtt_rosparam</exec_depend> 
  <exec_depend>rtt_std_msgs</exec_depend> 
  <exec_depend>rtt_std_srvs</exec_depend> 
  <exec_depend>rtt_geometry_msgs</exec_depend> 
  

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      
    </rtt_ros>
  </export>
</package>
